<resources>
    <string name="app_name">My APP2 MobDev</string>
    <string name="your_time">Your Time: 2,05sek</string>
    <string name="required_time">Try stopping the time at 1 second</string>
    <string name="difference">Difference: 0,05sek / 3,5%off</string>
    <string name="Score">Score 200 Points</string>
    <string name="textViewStreakText">Streak: 0</string>
    <string name="textViewMultiplicatorText">Multiplicator: 1.0x</string>
    <string name="textViewCommentString">Test your \ninner stopwatch!</string>
    <string name="current_score">Current Score : 0</string>
    <string name="highScore">Highscore : 0</string>
    <string name="exitString">Return to\n Titlescreen</string>
    <string name="Title_Text">The clock is ticking...\nAre you ready for a challenge?</string>
    <string name="highscore_Text_TitleScreen">High Score\n0000</string>
    <string name="Last_Score_Text_Title_Screen">Last Score\n0000</string>
    <string name="highScoreValue">0</string>

</resources>