<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_myAPP"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:textSize="50sp"
        android:backgroundTint="@color/orange"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="Start/Stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayoutScoreboard"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutScoreboard" />

    <TextView
        android:id="@+id/textViewComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewCommentString"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/linearLayoutScoreboard"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutScoreboard"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutScoreboard"
        android:visibility="visible"/>

    <LinearLayout
        android:id="@+id/linearLayoutScoreboard"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textViewComment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewYourTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_time"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textViewRequiredTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/required_time"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/textViewDifference"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/difference"
            android:textSize="25sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textViewScore"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Score"
            android:textSize="25sp"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/linearLayoutStreak"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutScoreboard"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="10sp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutHearts">


        <TextView
            android:id="@+id/textViewStreak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/textViewStreakText" />

        <TextView
            android:id="@+id/textViewMultiplicator"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textStyle="bold"

            android:layout_height="wrap_content"
            android:text="@string/textViewMultiplicatorText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutHearts"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="visible"
            app:srcCompat="@drawable/single_heart_old" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="visible"
            app:srcCompat="@drawable/single_heart_old" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="visible"
            app:srcCompat="@drawable/single_heart_old" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="visible"
            app:srcCompat="@drawable/single_heart_old" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="visible"
            app:srcCompat="@drawable/single_heart_old" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewHighScore"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/highScore" />

        <TextView
            android:id="@+id/textViewCurrentScore"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/current_score" />
    </LinearLayout>

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exitString"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:backgroundTint="@color/red"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>